// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity extension has duplicate property name should have validation failures() 1`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName of base Domain Entity."`;

exports[`when domain entity extension has duplicate property name should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 12,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when domain entity extension has multiple duplicates should have validation failures() 1`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName1 of base Domain Entity."`;

exports[`when domain entity extension has multiple duplicates should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 16,
  "tokenText": "DuplicatePropertyName1",
}
`;

exports[`when domain entity extension has multiple duplicates should have validation failures() 3`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName2 of base Domain Entity."`;

exports[`when domain entity extension has multiple duplicates should have validation failures() 4`] = `
Object {
  "column": 9,
  "line": 20,
  "tokenText": "DuplicatePropertyName2",
}
`;

exports[`when domain entity subclass and extension have duplicate property name should have validation failures() 1`] = `"Domain Entity Extension SubclassEntityName redeclares property DuplicatePropertyName of base Domain Entity Subclass."`;

exports[`when domain entity subclass and extension have duplicate property name should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 19,
  "tokenText": "DuplicatePropertyName",
}
`;
